--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,11 @@ python:
 
 install:
   - pip install --upgrade pip setuptools
-  - pip install git+git://github.com/project-gemmi/gemmi.git
   - pip install coveralls
 
 # Command to run tests
 #script: python setup.py test
-script: coverage run --source adding_stats_to_mmcif setup.py test
+script: coverage run --source wwpdb_validation setup.py test
 
 after_success:
     coveralls
