--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 
 install:
   - pip install --upgrade pip setuptools
+  - pip install git+git://github.com/project-gemmi/gemmi.git
   - pip install coveralls
 
 # Command to run tests
