--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 schedules:
-- cron: "0 0 * * *"
+- cron: "0 */3 * * *"
   displayName: Daily midnight build
   branches:
     include:
