--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 schedules:
 - cron: "0 */3 * * *"
-  displayName: Daily midnight build
+  displayName: Build every 3 hours
   branches:
     include:
     - master
@@ -18,8 +18,6 @@ strategy:
   matrix:
     Python27:
       python.version: '2.7'
-    Python35:
-      python.version: '3.5'
     Python36:
       python.version: '3.6'
     Python37:
