--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,13 +2,13 @@
 # Create and test a Python package on multiple Python versions.
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
-schedules:
-- cron: "0 */3 * * *"
-  displayName: Build every 3 hours
-  branches:
-    include:
-    - master
-  always: true
+#schedules:
+#- cron: "0 */3 * * *"
+#  displayName: Build every 3 hours
+#  branches:
+#    include:
+#    - master
+#  always: true
 trigger:
 - master
 
